fixed navbar scrolling in chrome, where the dom was too high because of the nav

--- a/css/style.scss
+++ b/css/style.scss
@@ -19,6 +19,12 @@ body {
     font-family: 'Work Sans';
 }
 
+section {
+    padding: 0em 8em 0em 8em;
+    margin: 0em 0em 8em 0em;
+}
+
+
 ::-webkit-scrollbar {
     width: 20px;
 }
@@ -62,11 +68,6 @@ body {
     padding: 0em 4em 0em 4em;
 }
 
-section {
-    padding: 0em 8em 0em 8em;
-    margin: 8em 0em 8em 0em;
-}
-
 #tejas-logo {
     width: 4em !important;
     height: auto !important;
@@ -83,21 +84,14 @@ section {
     font-family: 'Work Sans';
 }
 
-.autohide {
+#autohide {
     position: fixed;
     top: 0;
     right: 0;
     left: 0;
-    z-index: 1030;
+    z-index: 1000;
   }
   
-.autohide{
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    z-index: 1030;
-}
 .scrolled-down{
     transform:translateY(-100%); transition: all 0.3s ease-in-out;
 }
@@ -219,7 +213,7 @@ $inner-ratio: 0.98;
     font-size: 8em;
     text-shadow: -1px -1px 0 rgb(255, 255, 255), 1px -1px 0 rgb(255, 255, 255), -1px 1px 0 rgb(255, 255, 255), 1px 1px 0 rgb(255, 255, 255);
     
-    margin-top: 2em;
+    margin-top: 2.5em;
 }
 
 #wilkhoo {
@@ -444,7 +438,7 @@ i {
 
 @media only screen and (max-width: 1272px) {
     #tejas {
-        margin-top: calc(450px - 16vw);
+        margin-top: 330px;
         font-size: 10vw;
     }
     #wilkhoo {
@@ -467,7 +461,7 @@ i {
         padding: 0em 1em 0em 1em;
     }
     #tejas {
-        margin-top: calc(400px - 16vw);
+        margin-top: 380px;
         margin-left: 0.3em;
         font-size: Max(10vw, 3.4em);
     }
